Send click event to the board

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "Unity Editor",
             "type": "unity",
-            "path": "/e:/Programming/high-rise/Library/EditorInstance.json",
+            "path": "/Users/thanhdung/Documents/high-rise/Library/EditorInstance.json",
             "request": "launch"
         },
         {
